# Doctor-collector

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  Therapists.ipynb  config.yaml  docker-compose.yml  pyproject.toml
.agents/skills/doctor-change-workflow/: SKILL.md
.codex/: config.toml
.codex/agents/: doctor-code-reviewer.toml  doctor-safety-reviewer.toml
.github/workflows/: docker-publish.yml
docs/: CODEX_FEATURE_REQUEST_TEMPLATE.md  CODEX_WORKFLOW.md
src/doctor_collector/: __main__.py  config.py  web.py  workflow.py
src/doctor_collector/clients/: therapie.py
src/doctor_collector/models/: therapist.py
src/doctor_collector/notifications/: console.py
src/doctor_collector/services/: collector.py  contactor.py
tests/: test_cli.py  test_collector_csv.py  test_config_editor.py  test_search_radius_config.py  test_therapie_email_decode.py  test_therapie_rate_limit.py  test_web.py  test_workflow.py
