[project]
name = "doctor-collector"
version = "1.0.0"
description = "Collects therapist contact information from therapie.de and optionally contacts them"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.18,<0.19",
    "beautifulsoup4>=4.12",
    "aiosmtplib>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
